# SoEngine

./: .gitignore  .gitmodules  CMakePresets.json  CMakelists.txt  LICENSE  README.md  vcpkg.json
assets/models/viking_room/: viking_room.gltf
ext/: CMakeLists.txt
models/amiya-arknights/: model.mtl
shaders/: CMakeLists.txt  compile.sh  gradient.slang  gradient_color.slang  mesh.slang  shader.frag  shader.vert  sky.slang
source/: descriptor.h  triangle.cpp  triangle_module.cpp  vertex.hpp
src/: CMakeLists.txt  application.cpp  application.h  base.h  config.h  main.cpp  triangle.cpp  vertex.h
src/app/: application.cpp  application.h  compute_app.cpp  compute_app.h  demo_app.cpp  demo_app.h  main.cpp  model_app.cpp  model_app.h  old.cc
src/common/: error.h  glm_common.h  ktx_error.cpp  ktx_error.h  vk_common.h
src/core/: config.h  descriptors.cpp  descriptors.h  frame_data.cpp  frame_data.h  images.cpp  images.h  initializers.cpp  initializers.h  pipelines.cpp  pipelines.h  so_engine.cpp  so_engine.h  types.cpp  types.h
src/engine/: camera.h  main.cpp  model_object.hpp  so_engine.cpp  so_engine.h  vertex.h
src/platform/: window.cpp  window.h
src/render/: config.h
src/render/vulkan/: vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.cpp  vk_types.h  vk_utils.cpp  vk_utils.h
src/resource/: model_object.h
src/utils/: deletion_queue.cpp  deletion_queue.h  log.cpp  logging.h  timer.cpp  timer.h  type_traits.h
src/window/: input_events.h  intput_events.cpp  window.cpp  window.h
